Add more details about redirect link file source