@@ -3,6 +3,7 @@ package com.roiex.linkchecker;
 import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -15,7 +16,6 @@ import java.util.Queue;
 import java.util.Set;
 
 import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.RedirectStrategy;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.client.methods.HttpHead;
 import org.apache.http.impl.client.CloseableHttpClient;
@@ -42,32 +42,88 @@ public class LinkProcessor {
 			new URL(server);
 			this.server = server;
 			this.base = directory.toPath();
-			RedirectStrategy permanentRedirHandler = new RedirectListener((s, d) -> {
-				if (!LinkChecker.ignore301()) {
-					try {
-						URL url = new URL(s);
-						if (!checkedLinks.containsKey(url)) {
-							checkedLinks.put(url, new HashSet<>());
-						}
-						LinkChecker.warn(new SharedMessage("Link '" + s + "' was redirected permanently to '" + d + "' Consider updating this link", checkedLinks.get(url)));
-					} catch (MalformedURLException e) {
-						e.printStackTrace();
-					}
-				}
-			});
-			try (CloseableHttpClient client = HttpClients.custom().setRetryHandler(new DefaultHttpRequestRetryHandler(1, false)).setRedirectStrategy(permanentRedirHandler).disableCookieManagement().build()) {
-				Files.find(base, 999, (path, bfa) -> bfa.isRegularFile() && path.getFileName().toString().matches(".*\\.(html|htm)")).forEach(this::getLinks);
-				System.out.println();
-				processQueue(client);
-			}
 		} catch (IOException e) {
 			System.err.println("Invalid URL: " + server);
 			e.printStackTrace();
 		}
 	}
+
+	public void process() {
+		RedirectListener permanentRedirHandler = new RedirectListener((r) -> {
+			if (!LinkChecker.ignore301()) {
+				try {
+					URL url = new URL(r.getSourceURL()).toURI().normalize().toURL();
+					if (!checkedLinks.containsKey(url)) {
+						checkedLinks.put(url, new HashSet<>());
+					}
+					LinkChecker.warn(new SharedMessage("Link '" + url.toString() + "' was redirected permanently to '" + r.getDestinationURL() + "' Consider updating this link", checkedLinks.get(url)));
+				} catch (MalformedURLException | URISyntaxException e) {
+					e.printStackTrace();
+				}
+			}
+		});
+		try (CloseableHttpClient client = HttpClients.custom().setRetryHandler(new DefaultHttpRequestRetryHandler(1, false)).setRedirectStrategy(permanentRedirHandler).disableCookieManagement().build()) {
+			Files.find(base, 999, (path, bfa) -> bfa.isRegularFile() && path.getFileName().toString().matches(".*\\.(html|htm)")).forEach(this::getLinks);
+			System.out.println();
+			processQueue(client);
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
+		addRelayFiles(permanentRedirHandler.getRedirects());
+	}
+
+	void addRelayFiles(Set<RedirectionRelay> redirects) {
+		try {
+			LinkedList<RedirectionRelay> result = new LinkedList<>();
+			LinkedList<RedirectionRelay> relays = new LinkedList<>(redirects);
+			while (!relays.isEmpty()) {
+				RedirectionRelay newRelay = relays.poll();
+				result.addLast(newRelay);
+				addNextToList(newRelay, result, relays);
+			}
+			System.out.println(Arrays.toString(result.toArray()));
+			for (RedirectionRelay redirect : result) {
+				Set<Path> affectedFiles = checkedLinks.getOrDefault(new URL(redirect.getSourceURL()).toURI().normalize().toURL(), new HashSet<>());
+				URL destURL = new URL(redirect.getDestinationURL()).toURI().normalize().toURL();
+				if (!checkedLinks.containsKey(destURL)) {
+					checkedLinks.put(destURL, new HashSet<>());
+				}
+				checkedLinks.get(destURL).addAll(affectedFiles);
+			}
+		} catch (MalformedURLException | URISyntaxException e) {
+			e.printStackTrace();
+		}
+	}
+
+	void addNextToList(RedirectionRelay start, LinkedList<RedirectionRelay> source, LinkedList<RedirectionRelay> pool) {
+		RedirectionRelay prev = null;
+		RedirectionRelay next = null;
+		for (RedirectionRelay current : pool) {
+			int compareValue = start.compareTo(current);
+			if (compareValue < 0) {
+				next = current;
+			} else if (compareValue > 0) {
+				prev = current;
+			}
+			if (prev != null && next != null) {
+				break;
+			}
+		}
+		if (prev != null) {
+			pool.remove(prev);
+			source.addFirst(prev);
+			addNextToList(prev, source, pool);
+		}
+		if (next != null) {
+			pool.remove(next);
+			source.addLast(next);
+			addNextToList(next, source, pool);
+		}
+	}
+
 	private void getLinks(Path path) {
 		try {
-			LinkChecker.logCurrent("Processing " + path.toAbsolutePath());
+			LinkChecker.logCurrent("Processing " + path.toAbsolutePath().normalize());
 			Document doc = Jsoup.parse(path.toFile(), null);
 			extractAttributes(path, doc.getElementsByTag("img"), "src");
 			extractAttributes(path, doc.getElementsByTag("script"), "src");
@@ -110,8 +166,8 @@ public class LinkProcessor {
 		}
 		Path relativePath = base.toAbsolutePath().relativize(source);
 		try {
-			return new URL(server + relativePath.toString().replaceAll("\\\\", "/") + "/" + link).toString();
-		} catch (MalformedURLException e) {
+			return new URL(server + relativePath.toString().replaceAll("\\\\", "/") + "/" + link).toURI().normalize().toURL().toString();
+		} catch (MalformedURLException | URISyntaxException e) {
 			throw new IllegalArgumentException(e);
 		}
 	}
@@ -122,24 +178,24 @@ public class LinkProcessor {
 			if (!LinkChecker.ignoreOutgoing()) {
 				processQueue(client, outgoingLinks);
 			}
-		} catch (IOException e) {
+		} catch (IOException | URISyntaxException e) {
 			e.printStackTrace();
 		}
 	}
-	private void processQueue(CloseableHttpClient client, Queue<URLSource> queue) throws ClientProtocolException, IOException {
+	private void processQueue(CloseableHttpClient client, Queue<URLSource> queue) throws ClientProtocolException, IOException, URISyntaxException {
 		System.out.println();
 		while (!queue.isEmpty()) {
 			URLSource urlSource = queue.poll();
 			String url = urlSource.getURL();
-			URL urlObject = new URL(url);
+			URL urlObject = new URL(url).toURI().normalize().toURL();
 			if (checkedLinks.containsKey(urlObject)) {
 				checkedLinks.get(urlObject).add(urlSource.getPath());
 				continue;
 			}
-			checkedLinks.put(urlObject, new HashSet<>(Arrays.asList(urlSource.getPath())));
+			checkedLinks.put(urlObject, new HashSet<>(Arrays.asList(urlSource.getPath().toAbsolutePath().normalize())));
 			try {
 				HttpHead head = new HttpHead(url);
-				LinkChecker.logCurrent("Checking " + url);
+				LinkChecker.logCurrent("Checking " + urlObject.toString());
 				try (CloseableHttpResponse response = client.execute(head)) {
 					int status = response.getStatusLine().getStatusCode();
 					int statusType = Integer.parseInt(String.valueOf(Integer.toString(status).charAt(0)));
